--- a/ssh/config.json
+++ b/ssh/config.json
@@ -2,7 +2,7 @@
   "name": "SSH server",
   "version": "8.2",
   "slug": "ssh",
-  "description": "Allows connections over SSH",
+  "description": "Allow logging in remotely to Home Assistant using SSH",
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/ssh",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "startup": "services",
