--- a/cec_scan/Dockerfile
+++ b/cec_scan/Dockerfile
@@ -1,6 +1,10 @@
 ARG BUILD_FROM
 FROM $BUILD_FROM
 
+# Set shell
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+
+# Meta
 WORKDIR /usr/src
 ARG BUILD_ARCH
 ARG LIBCEC_VERSION
