added support for netcup dns (#1030)
* added support for netcup dns

* Changes based on PR feedback

* changed rexexp for netcup propagation seconds

* pinned netcup plugin to a version

* updated changelog + version to 4.4

* adapted to new format of example json

--- a/letsencrypt/Dockerfile
+++ b/letsencrypt/Dockerfile
@@ -3,6 +3,7 @@ FROM $BUILD_FROM
 
 # setup base
 ARG CERTBOT_VERSION
+ARG CERTBOT_NETCUP_VERSION
 
 RUN apk add --no-cache --update \
         libffi \
@@ -28,6 +29,7 @@ RUN apk add --no-cache --update \
         certbot-dns-rfc2136==${CERTBOT_VERSION} \
         certbot-dns-route53==${CERTBOT_VERSION} \
         certbot-dns-sakuracloud==${CERTBOT_VERSION} \
+        certbot-dns-netcup==${CERTBOT_NETCUP_VERSION} \
     && apk del .build-dependencies
 
 # Copy data
