--- a/mariadb/config.json
+++ b/mariadb/config.json
@@ -12,22 +12,18 @@
   },
   "options": {
     "databases": ["homeassistant"],
-    "logins": [{ "username": "hass", "host": "%", "password": null }],
+    "logins": [{ "username": "hass", "password": null }],
     "rights": [
       {
         "username": "hass",
-        "host": "%",
-        "database": "homeassistant",
-        "grant": "ALL PRIVILEGES ON"
+        "database": "homeassistant"
       }
     ]
   },
   "schema": {
     "databases": ["str"],
-    "logins": [{ "username": "str", "host": "str", "password": "str" }],
-    "rights": [
-      { "username": "str", "host": "str", "database": "str", "grant": "str" }
-    ]
+    "logins": [{ "username": "str", "password": "str" }],
+    "rights": [{ "username": "str", "database": "str" }]
   },
   "image": "homeassistant/{arch}-addon-mariadb",
   "timeout": 20
