--- a/mariadb/config.json
+++ b/mariadb/config.json
@@ -7,6 +7,7 @@
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "startup": "system",
   "boot": "auto",
+  "services": ["mysql:provide"],
   "ports": {
     "3306/tcp": 3306
   },
