ssh: Update CLI & Web terminal

--- a/ssh/Dockerfile
+++ b/ssh/Dockerfile
@@ -12,6 +12,7 @@ RUN \
         json-c-dev \
         libuv-dev \
         openssl-dev \
+        zlib-dev \
     \
     && apk add --no-cache \
         bash-completion \
@@ -70,14 +71,15 @@ RUN sed -i 's/^#[[:space:]]*\(include "\/usr\/share\/nano\/\*\.nanorc".*\)/\1/' 
 # Home Assistant CLI
 ARG BUILD_ARCH
 ARG CLI_VERSION
-RUN curl -Lso /usr/bin/hassio \
-        "https://github.com/home-assistant/hassio-cli/releases/download/${CLI_VERSION}/hassio_${BUILD_ARCH}" \
-    && chmod a+x /usr/bin/hassio \
-    && /usr/bin/hassio completion > /usr/share/bash-completion/completions/hassio
+RUN curl -Lso /usr/bin/ha \
+        "https://github.com/home-assistant/cli/releases/download/${CLI_VERSION}/ha_${BUILD_ARCH}" \
+    && chmod a+x /usr/bin/ha \
+    && /usr/bin/ha completion > /usr/share/bash-completion/completions/ha
 
 # Copy data
 COPY data/.tmux.conf /root/
-COPY data/hassio.sh /etc/profile.d/
+COPY data/hassio /usr/bin/
+COPY data/homeassistant.sh /etc/profile.d/
 COPY data/motd /etc/
 COPY data/run.sh /
 COPY data/sshd_config /etc/ssh/
