Close port to world

--- a/mariadb/config.json
+++ b/mariadb/config.json
@@ -9,7 +9,7 @@
   "boot": "auto",
   "services": ["mysql:provide"],
   "ports": {
-    "3306/tcp": 3306
+    "3306/tcp": null
   },
   "options": {
     "databases": ["homeassistant"],
