--- a/letsencrypt/Dockerfile
+++ b/letsencrypt/Dockerfile
@@ -14,7 +14,9 @@ RUN apk add --no-cache --update \
         libffi-dev \
         musl-dev \
         openssl-dev \
-    && pip3 install --no-cache-dir certbot==${CERTBOT_VERSION} \
+    && pip3 install --no-cache-dir --find-links \
+        "https://wheels.home-assistant.io/alpine-$(cut -d '.' -f 1-2 < /etc/alpine-release)/${BUILD_ARCH}/" \
+        certbot==${CERTBOT_VERSION} \
         certbot-dns-cloudflare==${CERTBOT_VERSION} \
         certbot-dns-cloudxns==${CERTBOT_VERSION} \
         certbot-dns-digitalocean==${CERTBOT_VERSION} \
