duckdns: add option to grab IP addresses from URLs
Enables use of external services instead of Duck DNS' automatic
detection, which at time of writing doesn't work with IPv6.

--- a/duckdns/config.json
+++ b/duckdns/config.json
@@ -7,7 +7,7 @@
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "startup": "services",
   "boot": "auto",
-  "map": ["ssl:rw"],
+  "map": ["ssl:rw", "share:ro"],
   "options": {
     "lets_encrypt": {
       "accept_terms": false,
