--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
 	"name": "Hass.io Community Add-Ons",
 	"context": "..",
 	"dockerFile": "Dockerfile",
-	"appPort": 7123,
+	"appPort": "7123:8123",
 	"runArgs": [
 		"-e",
 		"GIT_EDITOR=code --wait",
