--- a/homematic/config.json
+++ b/homematic/config.json
@@ -11,7 +11,7 @@
   "auto_uart": true,
   "gpio": true,
   "apparmor": false,
-  "webui": "http://[HOST]:[PORT:80]/",
+  "ingress": true,
   "ports": {
     "80/tcp": null,
     "2001/tcp": 2001,
@@ -19,7 +19,7 @@
     "2010/tcp": 2010
   },
   "ports_description": {
-    "80/tcp": "ReGaHss Webinterface",
+    "80/tcp": "ReGaHss Webinterface (Not required for Ingress)",
     "2001/tcp": "Homematic xmlrpc",
     "2000/tcp": "HomematicWire xmlrpc",
     "2010/tcp": "HomematicIP xmlrpc"
@@ -72,6 +72,5 @@
         "device": "match(^/dev/.*$)"
       }
     ]
-  },
-  "image": "homeassistant/{arch}-addon-homematic"
+  }
 }
