--- a/homematic/data/nginx.conf
+++ b/homematic/data/nginx.conf
@@ -15,7 +15,6 @@ http {
     proxy_read_timeout  1200;
     gzip                on;
     gzip_disable        "msie6";
-    resolver            127.0.0.11;
 
     map $http_upgrade $connection_upgrade {
         default upgrade;
@@ -38,8 +37,8 @@ http {
         root /dev/null;
 
         location / {
-            proxy_pass http://localhost:80;
-            proxy_redirect / $schema://$host%%INGRESS_ENTRY%%/;
+            proxy_pass http://127.0.0.1:80;
+            proxy_redirect ~^/(.+)$ $scheme://$http_host%%INGRESS_ENTRY%%/$1;
 
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -54,14 +53,21 @@ http {
             sub_filter_once off;
             sub_filter_types *;
 
+            # Hack for reset paths back
+            sub_filter '/etc/config/' '/etc/config/';
+
             # Make URLs relative 
-            sub_filter '/webui/' 'webui/';
-            sub_filter '/ise/' 'ise/';
-            sub_filter '/pda/' 'pda/';
-            sub_filter '/config/' 'config/';
-            sub_filter '/api/' 'api/';
-            sub_filter '/pages/' 'pages/';
-            sub_filter '/jpages/' 'jpages/';
+            sub_filter '/webui/' '%%INGRESS_ENTRY%%/webui/';
+            sub_filter '/ise/' '%%INGRESS_ENTRY%%/ise/';
+            sub_filter '/pda/' '%%INGRESS_ENTRY%%/pda/';
+            sub_filter '/config/' '%%INGRESS_ENTRY%%/config/';
+            sub_filter '/api/' '%%INGRESS_ENTRY%%/api/';
+            sub_filter '/pages/' '%%INGRESS_ENTRY%%/pages/';
+            sub_filter '/jpages/' '%%INGRESS_ENTRY%%/jpages/';
+            sub_filter '/esp/' '%%INGRESS_ENTRY%%/esp/';
+
+            # Protect iframe breakouts
+            sub_filter 'top.window.location.href' 'location.href';
         }
     }
 }
