--- a/homematic/Dockerfile
+++ b/homematic/Dockerfile
@@ -9,10 +9,12 @@ RUN apt-get update \
     && apt-get install -y --no-install-recommends \
         libusb-1.0 \
         lighttpd \
+        nginx \
         openjdk-11-jre-headless \
     && rm -rf /var/lib/apt/lists/*
 
 ARG OCCU_VERSION
+ARG CCU_VERSION
 ARG BUILD_ARCH
 
 # Install OCCU
@@ -27,7 +29,7 @@ RUN curl -SL https://github.com/jens-maus/occu/archive/${OCCU_VERSION}.tar.gz | 
         /opt/HMServer \
         /var/status \
     \
-    && echo "VERSION=${OCCU_VERSION}" > /boot/VERSION \
+    && echo "VERSION=${CCU_VERSION}" > /boot/VERSION \
     && cp /boot/VERSION /VERSION \
     && ln -s /opt/hm/etc/config /etc/config \
     \
@@ -62,7 +64,7 @@ RUN curl -SL https://github.com/jens-maus/occu/archive/${OCCU_VERSION}.tar.gz | 
     && cp -R HMserver/opt/HMServer/measurement /opt/HMServer/ \
     && cp -R HMserver/opt/HMServer/pages /opt/HMServer/ \
     \
-    && sed -i "s/WEBUI_VERSION = \".*\"/WEBUI_VERSION = \"${OCCU_VERSION}\"/" WebUI/www/rega/pages/index.htm \
+    && sed -i "s/WEBUI_VERSION = \".*\"/WEBUI_VERSION = \"${CCU_VERSION}\"/" WebUI/www/rega/pages/index.htm \
     && cp -R WebUI/* / \
     && ln -s /www /opt/hm/www \
     \
@@ -76,6 +78,7 @@ ENV HM_HOME=/opt/hm LD_LIBRARY_PATH=/opt/hm/lib:${LD_LIBRARY_PATH}
 
 # Update config files
 COPY data/config/* /opt/hm/etc/config/
+COPY data/nginx.conf /etc/nginx/nginx.conf
 
 # Setup start script
 COPY data/run.sh /
