--- a/homematic/data/nginx.conf
+++ b/homematic/data/nginx.conf
@@ -21,6 +21,12 @@ http {
         ''      close;
     }
 
+    # https://stackoverflow.com/questions/21230918/nginx-scheme-variable-behind-load-balancer/21911864#21911864
+    map $http_x_forwarded_proto $real_scheme {
+        default $http_x_forwarded_proto;
+        ''      $scheme;
+    }
+
     # Ingress
     server {
         listen 8099 default_server;
@@ -35,10 +41,10 @@ http {
         keepalive_timeout 5;
 
         root /dev/null;
-
+            
         location / {
             proxy_pass http://127.0.0.1:80;
-            proxy_redirect ~^/(.+)$ $scheme://$http_host%%INGRESS_ENTRY%%/$1;
+            proxy_redirect ~^/(.+)$ $real_scheme://$http_host%%INGRESS_ENTRY%%/$1;
 
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
