--- a/letsencrypt/config.json
+++ b/letsencrypt/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Let's Encrypt",
-  "version": "4.5",
+  "version": "4.6",
   "slug": "letsencrypt",
   "description": "Manage certificate from Let's Encrypt",
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/letsencrypt",
@@ -30,6 +30,7 @@
     "challenge": "list(dns|http)",
     "dns": {
       "provider": "list(dns-cloudflare|dns-cloudxns|dns-digitalocean|dns-dnsimple|dns-dnsmadeeasy|dns-gehirn|dns-google|dns-linode|dns-luadns|dns-nsone|dns-ovh|dns-rfc2136|dns-route53|dns-sakuracloud|dns-netcup)?",
+      "propagation_seconds": "int(60,3600)?",
       "cloudflare_email": "email?",
       "cloudflare_api_key": "str?",
       "cloudflare_api_token": "str?",
@@ -62,8 +63,7 @@
       "sakuracloud_api_secret": "str?",
       "netcup_customer_id": "str?",
       "netcup_api_key": "str?",
-      "netcup_api_password": "str?",
-      "netcup_propagation_seconds": "int(60,3600)?"
+      "netcup_api_password": "str?"
     }
   },
   "image": "homeassistant/{arch}-addon-letsencrypt"
