Add advanced flag and stage

--- a/git_pull/config.json
+++ b/git_pull/config.json
@@ -5,6 +5,7 @@
   "description": "Simple git pull to update the local configuration",
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/git_pull",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
+  "advanced": true,
   "startup": "services",
   "boot": "manual",
   "hassio_api": true,
