--- a/cec_scan/config.json
+++ b/cec_scan/config.json
@@ -5,6 +5,7 @@
   "description": "Scan for HDMI CEC devices",
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/cec_scan",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
+  "advanced": true,
   "startup": "once",
   "boot": "manual",
   "video": true,
