--- a/git_pull/Dockerfile
+++ b/git_pull/Dockerfile
@@ -7,9 +7,9 @@ RUN apk add --no-cache jq curl git openssh-client
 # Home Assistant CLI
 ARG BUILD_ARCH
 ARG CLI_VERSION
-RUN curl -Lso /usr/bin/hassio \
-        "https://github.com/home-assistant/hassio-cli/releases/download/${CLI_VERSION}/hassio_${BUILD_ARCH}" \
-    && chmod a+x /usr/bin/hassio
+RUN curl -Lso /usr/bin/ha \
+        "https://github.com/home-assistant/cli/releases/download/${CLI_VERSION}/ha_${BUILD_ARCH}" \
+    && chmod a+x /usr/bin/ha
 
 # Copy data
 COPY data/run.sh /
