--- a/duckdns/config.json
+++ b/duckdns/config.json
@@ -1,13 +1,13 @@
 {
   "name": "Duck DNS",
-  "version": "1.10",
+  "version": "1.11",
   "slug": "duckdns",
   "description": "Free Dynamic DNS (DynDNS or DDNS) service with Let's Encrypt support",
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/duckdns",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "startup": "services",
   "boot": "auto",
-  "map": ["ssl:rw", "share:ro"],
+  "map": ["ssl:rw"],
   "options": {
     "lets_encrypt": {
       "accept_terms": false,
