--- a/ada/config.json
+++ b/ada/config.json
@@ -1,14 +1,15 @@
 {
   "name": "Hey Ada!",
-  "version": "1.0",
+  "version": "1.1.0",
   "slug": "ada",
   "description": "Voice assistant powered by Home Assistant",
   "url": "https://github.com/home-assistant/hassio-addons/blob/master/ada",
   "arch": ["armhf", "armv7", "amd64"],
+  "init": false,
   "startup": "application",
   "boot": "auto",
   "audio": true,
-  "homeassistant": "0.102.0.dev",
+  "homeassistant": "0.102.0",
   "homeassistant_api": true,
   "options": {
     "stt": "cloud",
