--- a/ssh/config.json
+++ b/ssh/config.json
@@ -1,10 +1,11 @@
 {
   "name": "Terminal & SSH",
-  "version": "8.4",
+  "version": "8.5.0",
   "slug": "ssh",
   "description": "Allow logging in remotely to Home Assistant using SSH",
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/ssh",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
+  "init": false,
   "advanced": true,
   "startup": "services",
   "ingress": true,
@@ -13,6 +14,7 @@
   "boot": "auto",
   "hassio_api": true,
   "hassio_role": "manager",
+  "audio": true,
   "auto_uart": true,
   "ports": {
     "22/tcp": null
