--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Start Hass.io",
+            "label": "Start Home Assistant",
             "type": "shell",
             "command": "/workspaces/test_hassio/addons/local/.devcontainer/start_hassio.sh",
             "group": {
@@ -17,7 +17,7 @@
             },
             "problemMatcher": []
         },{
-            "label": "Cleanup stale Hass.io environment",
+            "label": "Cleanup stale Home Assistant environment",
             "type": "shell",
             "command": "/workspaces/test_hassio/addons/local/.devcontainer/start_hassio.sh --cleanup",
             "group": "test",
@@ -27,7 +27,7 @@
             },
             "problemMatcher": []
         },{
-            "label": "Run Hass.io CLI",
+            "label": "Run Home Assistant CLI",
             "type": "shell",
             "command": "docker run --rm -ti -v /etc/machine-id:/etc/machine-id --network=hassio --add-host hassio:172.30.32.2 homeassistant/amd64-hassio-cli:dev",
             "group": "test",
