--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 // Based on https://github.com/issacg/hassio-addon-devcontainer
 {
-	"name": "Hass.io Community Add-Ons",
+	"name": "Home Assistant Add-Ons",
 	"context": "..",
 	"dockerFile": "Dockerfile",
 	"appPort": "7123:8123",
@@ -8,6 +8,10 @@
 		"-e",
 		"GIT_EDITOR=code --wait",
 		"--privileged"
+	],
+	"extensions": [
+		"timonwong.shellcheck",
+		"esbenp.prettier-vscode"
 	],
 	"settings": { 
 		"terminal.integrated.shell.linux": "/bin/bash"
