--- a/google_assistant/config.json
+++ b/google_assistant/config.json
@@ -1,12 +1,13 @@
 {
   "name": "Google Assistant SDK",
-  "version": "2.2",
+  "version": "2.3.0",
   "slug": "google_assistant",
   "description": "A virtual personal assistant developed by Google",
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/google_assistant",
   "startup": "application",
   "boot": "auto",
-  "arch": ["armv7", "amd64"],
+  "arch": ["armhf", "armv7", "amd64"],
+  "init": false,
   "advanced": true,
   "stage": "experimental",
   "map": ["share"],
