--- a/google_assistant/Dockerfile
+++ b/google_assistant/Dockerfile
@@ -1,13 +1,12 @@
 ARG BUILD_FROM
 FROM $BUILD_FROM
 
-ARG \
-    GOOGLE_GRPC_VERSION \
-    GOOGLE_LIBRARY_VERSION \
-    GOOGLE_SDK_VERSION \
-    GOOGLE_AUTH_VERSION \
-    REQUESTS_OAUTHLIB_VERSION \
-    CHERRYPY_VERSION
+ARG GOOGLE_GRPC_VERSION
+ARG GOOGLE_LIBRARY_VERSION
+ARG GOOGLE_SDK_VERSION 
+ARG GOOGLE_AUTH_VERSION
+ARG REQUESTS_OAUTHLIB_VERSION
+ARG CHERRYPY_VERSION
 
 # Install packages
 RUN apt-get update \
