--- a/letsencrypt/Dockerfile
+++ b/letsencrypt/Dockerfile
@@ -35,6 +35,4 @@ RUN apk add --no-cache --update \
     && apk del .build-dependencies
 
 # Copy data
-COPY data/run.sh /
-
-CMD [ "/run.sh" ]
+COPY rootfs /
