--- a/letsencrypt/config.json
+++ b/letsencrypt/config.json
@@ -1,11 +1,12 @@
 {
   "name": "Let's Encrypt",
-  "version": "4.7.0",
+  "version": "4.7.1",
   "slug": "letsencrypt",
   "description": "Manage certificate from Let's Encrypt",
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/letsencrypt",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "startup": "once",
+  "init": false,
   "boot": "manual",
   "ports": {
     "80/tcp": 80
