--- a/git_pull/config.json
+++ b/git_pull/config.json
@@ -6,6 +6,7 @@
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/git_pull",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "advanced": true,
+  "init": false,
   "startup": "services",
   "boot": "manual",
   "hassio_api": true,
