--- a/check_config/config.json
+++ b/check_config/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Check Home Assistant configuration",
-  "version": "3.1",
+  "version": "3.2.0",
   "slug": "check_config",
   "description": "Check current Home Assistant configuration against a new version",
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/check_config",
@@ -8,6 +8,7 @@
   "udev": true,
   "startup": "once",
   "boot": "manual",
+  "init": false,
   "map": ["config", "ssl"],
   "options": {
     "version": "latest"
