Revert "Remove advanced flag (#1216)"
This reverts commit 9f619b597192d1f76868b21a843dfbba8471a217.

--- a/ssh/config.json
+++ b/ssh/config.json
@@ -6,6 +6,7 @@
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/ssh",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "init": false,
+  "advanced": true,
   "startup": "services",
   "ingress": true,
   "panel_icon": "mdi:console",
