--- a/configurator/Dockerfile
+++ b/configurator/Dockerfile
@@ -2,15 +2,23 @@ ARG BUILD_FROM
 FROM $BUILD_FROM
 
 # Setup base
+ARG BUILD_ARCH
 ARG CONFIGURATOR_VERSION
-RUN apk add --no-cache \
+RUN \
+    apk add --no-cache \
         git \
         openssh-client \
-    && pip install --no-cache-dir \
-        hass-configurator==${CONFIGURATOR_VERSION}
+        python3 \
+    && pip3 install \
+        --no-cache-dir \
+        --prefer-binary \
+        --find-links "https://wheels.home-assistant.io/alpine-3.11/${BUILD_ARCH}/" \
+        hass-configurator=="${CONFIGURATOR_VERSION}" \
+    \
+    && find /usr/local \
+        \( -type d -a -name test -o -name tests -o -name '__pycache__' \) \
+        -o \( -type f -a -name '*.pyc' -o -name '*.pyo' \) \
+        -exec rm -rf '{}' +
 
 # Copy data
-COPY data/configurator.conf /etc/
-COPY data/run.sh /
-
-CMD ["/run.sh"]
+COPY rootfs /
