--- a/configurator/config.json
+++ b/configurator/config.json
@@ -1,12 +1,13 @@
 {
   "name": "File editor",
-  "version": "4.7",
+  "version": "5.0.0",
   "slug": "configurator",
   "description": "Simple browser-based file editor for Home Assistant",
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/configurator",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "homeassistant": "0.91.1",
   "startup": "application",
+  "init": false,
   "ingress": true,
   "panel_icon": "mdi:wrench",
   "homeassistant_api": true,
