--- a/zwave/rootfs/etc/mosquitto.conf
+++ b/zwave/rootfs/etc/mosquitto.conf
@@ -1,6 +1,6 @@
 ##
 # defaults
-listener 1883 127.0.0.1
+listener 1883
 user root
 
 ##
@@ -11,5 +11,10 @@ log_dest stdout
 # datastore
 persistence true
 persistence_location /data/
+
+##
+# auth
+allow_anonymous false
+password_file /data/auth.db
 
 # Dynamic config
