--- a/zwave/config.json
+++ b/zwave/config.json
@@ -7,6 +7,7 @@
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/zwave",
   "startup": "services",
   "boot": "auto",
+  "init": false,
   "stage": "experimental",
   "homeassistant": "0.110.0",
   "services": ["want:mqtt"],
