--- a/almond/azure-pipelines.yml
+++ b/almond/azure-pipelines.yml
@@ -8,14 +8,21 @@ trigger:
     include:
       - almond/*
 pr: none
+resources:
+  repositories:
+    - repository: azure
+      type: github
+      name: "home-assistant/ci-azure"
+      endpoint: "home-assistant"
 
 variables:
-  - name: versionBuilder
-    value: "2.0"
   - group: docker
 
 jobs:
-  - template: /.azure/azp-template-addon.yml
+  - template: templates/azp-job-version.yaml@azure
     parameters:
       addon: "almond"
-      arch: "--amd64 --armv7 --aarch64"
+      arch:
+      - amd64
+      - armv7
+      - aarch64
