--- a/zwave/config.json
+++ b/zwave/config.json
@@ -9,7 +9,7 @@
   "boot": "auto",
   "init": false,
   "stage": "experimental",
-  "homeassistant": "0.110.0",
+  "homeassistant": "0.110.0.dev",
   "services": ["mqtt:want"],
   "discovery": ["zwave_mqtt"],
   "auto_uart": true,
