--- a/google_assistant/azure-pipelines.yml
+++ b/google_assistant/azure-pipelines.yml
@@ -8,14 +8,21 @@ trigger:
     include:
       - google_assistant/*
 pr: none
+resources:
+  repositories:
+    - repository: azure
+      type: github
+      name: "home-assistant/ci-azure"
+      endpoint: "home-assistant"
 
 variables:
-  - name: versionBuilder
-    value: "2.0"
   - group: docker
 
 jobs:
-  - template: /.azure/azp-template-addon.yml
+  - template: templates/azp-job-addon.yaml@azure
     parameters:
       addon: "google_assistant"
-      arch: "--armv7 --armhf --amd64"
+      arch:
+      - armv7
+      - armhf
+      - amd64
