--- a/configurator/azure-pipelines.yml
+++ b/configurator/azure-pipelines.yml
@@ -19,6 +19,6 @@ variables:
   - group: docker
 
 jobs:
-  - template: templates/azp-job-version.yaml@azure
+  - template: templates/azp-job-addon.yaml@azure
     parameters:
       addon: "configurator"
