--- a/zwave/config.json
+++ b/zwave/config.json
@@ -1,6 +1,6 @@
 {
   "name": "OpenZwave",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "slug": "zwave",
   "description": "Control a ZWave network with Home Assistant",
   "arch": ["amd64", "i386", "armhf", "armv7", "aarch64"],
@@ -11,7 +11,7 @@
   "stage": "experimental",
   "homeassistant": "0.110.0.dev",
   "services": ["mqtt:want"],
-  "discovery": ["zwave_mqtt"],
+  "discovery": ["ozw"],
   "auto_uart": true,
   "gpio": true,
   "apparmor": false,
