--- a/google_assistant/config.json
+++ b/google_assistant/config.json
@@ -19,12 +19,14 @@
   "options": {
     "client_secrets": "google_assistant.json",
     "project_id": null,
-    "model_id": null
+    "model_id": null,
+    "feedback_sound": false
   },
   "schema": {
     "client_secrets": "str",
     "project_id": "str",
-    "model_id": "str"
+    "model_id": "str",
+    "feedback_sound": "bool?"
   },
   "image": "homeassistant/{arch}-addon-google_assistant"
 }
