--- a/google_assistant/config.json
+++ b/google_assistant/config.json
@@ -20,13 +20,19 @@
     "client_secrets": "google_assistant.json",
     "project_id": null,
     "model_id": null,
-    "feedback_sound": false
+    "feedback": {
+      "enable": false,
+      "volume": 0
+    }
   },
   "schema": {
     "client_secrets": "str",
     "project_id": "str",
     "model_id": "str",
-    "feedback_sound": "bool?"
+    "feedback": {
+      "enable": "bool",
+      "volume": "int(0,100)"
+    }
   },
   "image": "homeassistant/{arch}-addon-google_assistant"
 }
