--- a/google_assistant/config.json
+++ b/google_assistant/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Google Assistant SDK",
-  "version": "2.4.0",
+  "version": "2.5.0",
   "slug": "google_assistant",
   "description": "A virtual personal assistant developed by Google",
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/google_assistant",
@@ -19,12 +19,20 @@
   "options": {
     "client_secrets": "google_assistant.json",
     "project_id": null,
-    "model_id": null
+    "model_id": null,
+    "feedback": {
+      "enable": false,
+      "volume": 80
+    }
   },
   "schema": {
     "client_secrets": "str",
     "project_id": "str",
-    "model_id": "str"
+    "model_id": "str",
+    "feedback": {
+      "enable": "bool",
+      "volume": "int(0,100)"
+    }
   },
   "image": "homeassistant/{arch}-addon-google_assistant"
 }
