--- a/zwave/config.json
+++ b/zwave/config.json
@@ -25,8 +25,7 @@
   "devices": ["/dev/bus/usb:/dev/bus/usb:rwm", "/dev/mem:/dev/mem:rw"],
   "options": {
     "device": null,
-    "network_key": "",
-    "instance": 1
+    "network_key": ""
   },
   "schema": {
     "device": "str",
